[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/objects/Paw.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/Cat.gd" type="Script" id=2]
[ext_resource path="res://images/particle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="Animation" id=2]
resource_name = "despawn"
tracks/0/type = "value"
tracks/0/path = NodePath("Vis:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "grow"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Vis:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 10, 10 ), Vector2( 50, 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vis:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 115.5, 360.0, 3000.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Vis:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4.1, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 82.68
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 139.04
angular_velocity = 65.45
angular_velocity_random = 0.47
orbit_velocity = 0.0
orbit_velocity_random = 1.0
radial_accel = 19.31
radial_accel_random = 1.0
tangential_accel = 76.36
damping = 66.37
damping_random = 1.0
angle = 720.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Cat" type="Node2D"]
script = ExtResource( 2 )

[node name="Vis" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Vis"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/despawn = SubResource( 2 )
anims/grow = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
process_material = SubResource( 4 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
